-- Package Stanza
Name:           HBURG
Version:        1.0
License:        BSD3
License-file:   LICENSE
Author:         Igor Böhm <igor@bytelabs.org>
Maintainer:     igor@bytelabs.org
Homepage:       http://www.bytelabs.org/hburg.html
Category:       Code Generation
Synopsis:       Haskell Bottom Up Rewrite Generator
Description:    HBURG has been designed to produce a
	code generator for a target machine, given a specification
	of an abstract syntax tree of a program as well as a 
	specification of the target machine itself.
	Its goals are the following:
	.
	* Provide a powerful tree pattern matching specification 
	language with simplicity and easy readability in mind.
	.
	* Perform good static analysis aiding during the design of
	grammar specifications.
	.
	* Provide back-ends which generate code for various languages
	from the specification, ready to be plugged into a back-end
	compiler infrastructure. Currently Java Code is being generated
	(see http://www.bytelabs.org/hburg.html for an example on how
	to integrate the generated code into a compiler).
Stability:      Experimental
build-depends:  base, haskell98, filepath

-- Executable Stanza
executable:     hburg
main-is:        Main.hs
-- Optional Stuff in the executable stanza
hs-source-dirs: src
other-modules:  
	Parser.Lexer
	Parser.Parser
ghc-options: -O
	-funbox-strict-fields 
	-fglasgow-exts 
	-fwarn-unused-imports 
	-fwarn-duplicate-exports 
	-fwarn-incomplete-patterns 
	-fwarn-overlapping-patterns